--- a/Module_1_Python_Preliminaries.ipynb
+++ b/Module_1_Python_Preliminaries.ipynb
@@ -6,7 +6,7 @@
       "name": "Module_1_Python Preliminaries.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM8qcDb53b3OJ5JO/8X5/3c",
+      "authorship_tag": "ABX9TyPtanQVhZH3IY1MO93RuS03",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,16 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/dtrianab/Applications-of-Deep-Neural-Networks/blob/master/Module_1_Python_Preliminaries.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PY9cRL83j-Sv",
+        "colab_type": "text"
+      },
+      "source": [
+        "This preliminar file included the actual version of the modules used in Google Colab for the Course [[Video]](https://www.youtube.com/watch?v=czq5d53vKvo&list=PLjy4p-07OYzulelvJ5KVaT2pDlxivl_BN) [Notebook](https://colab.research.google.com/github/jeffheaton/t81_558_deep_learning/blob/master/t81_558_class_01_1_overview.ipynb#scrollTo=Hgh5oWr0he9i)  "
       ]
     },
     {
